@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for hk.on.cc
+
 v0.27.0 2020-07-06T22:17:57+0800
   - Add a site-specific extractor for new.ctv.com.tw
   - Add a site-specific extractor for hk.crntt.com
